# vscode-osgeo4w-dev-template

./: .gitignore  .pylintrc  LICENSE  README.md  example_gdal.cmd  example_gdal.ps1  example_python.py  hello.py  open_vscode.cmd  pyproject.toml
